--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "run seed": "node seeds/seed.js"
+    "seed": "node seeds/seed.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
