--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/seed.js"
+    "seed": "node seeds/seed.js",
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -18,6 +19,7 @@
     "hbs": "^4.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.28.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "tailwindcss": "^3.2.4"
   }
 }
