--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
+    "seedgames": "node seeds/gameSeed.js",
     "dev": "npx tailwindcss -i ./src/input.css -o ./public/css/output.css --watch"
   },
   "dependencies": {
